--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
 		"yajra/laravel-datatables-oracle": "~8.0"
 	},
 	"require-dev": {
+		"barryvdh/laravel-debugbar": "^3.2",
 		"filp/whoops": "~2.0",
 		"mockery/mockery": "0.9.*",
 		"phpunit/phpunit": "~6.0"
